v1.03 19-Sep-01
Added Verbose on/off option
Filenames are passed through strftime to allow backups to directories based on the current date/time
Options file can now be specified on the command line
Directory scanning code is now approximately 40% faster
Multitasking is now done by time rather than once per directory

v1.02 23-Feb-01
Fixed bug that caused some files to be copied even if they were in the exclude list

v1.01 12-Feb-01
Added saving of default setup.
Added ability to specify more than one directory in the source field.
Fixed a memory leak.

v1.00 31-Dec-00
Initial version